--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SALMON COOKIES  </title>
+    <title>SALMON COOKIES </title>
+<link rel="stylesheet" href="./css/stylesheet.css"> 
 </head>
+
 <body>
     <img src ="./assets/salmon_logo.JPG">
     
@@ -18,7 +20,6 @@
      <a href="./sales.html">click here for the sales page</a>
       </p>
 
-  
   </body>
 </body>
 </html
