--- a/sales.html
+++ b/sales.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>SALES-SALMON COOKIES</title>
-    <link rel="stylesheet href="./css/stylesheet.css"> 
+    <link rel="stylesheet" href="./css/stylesheet.css"> 
 </head>
 <body>
     <h1>COOKIES BAKED PER HOUR</h1>
     <h2>based on number of customers per hour and number average number of cookies per sale</h2>
 <br>
 
-<table id="stores"></table>
+<table id="cookieStores"></table>
 <br>
 
 <form id="newStore">
@@ -21,8 +21,8 @@
   <fieldset>
     <legend>Input New Store Information</legend>
 
-    <label for="storeName"> Name of Store
-    <input name="storeName" type="text">
+    <label for="storeLocation"> Location of Store
+    <input name="storeLoc" type="text">
     </label>
 
     <label for="minCustomers"> Minimmum Customers 
@@ -33,10 +33,10 @@
     <input name="maxName" type="text">
     </label>
 
-    <label for="avgCustomers"> Average Customers 
-    <input name="avgCustomers" type="text">
+    <label for="avgCookies"> Average Cookies 
+    <input name="avgCookies" type="text">
     </label>
-<br>
+
     <button type="submit" type="text">ADD NEW STORE</button>
     </label>
 
