working on table

--- a/sales.html
+++ b/sales.html
@@ -13,7 +13,11 @@
     <h2>based on number of customers per hour and number average number of cookies per sale</h2>
 <br>
 
-<table id="cookieStores"></table>
+
+<table id="cookieStores">
+
+</table>
+
 <br>
 
 <form id="newStore">
